--- a/orderSummary.css
+++ b/orderSummary.css
@@ -1,5 +1,5 @@
 html {
-    background-image: url(../images/pattern-background-desktop.svg);
+    background-image: url(./images/pattern-background-desktop.svg);
     background-repeat: no-repeat;
     background-size: cover;
     background-color: hsl(225, 100%, 94%);
